tests/paczka2/big_fuzzy/89466012.err
Error in line 3: 9mlbyRxyvfL A645 26,9
Error in line 1: gE5K5JDZ S427 44,3
Error in line 16: 1HUAmU A813 -4,5
Error in line 15: 4zuyCe6PBiZ A500 96,1
Error in line 36: 1HUAmU S427 68,2
Error in line 45: jB8WgAiPu A645 229,8
Error in line 61: gE5K5JDZ S427 54,9
Error in line 77: 1HUAmU A645 2,24
Error in line 70: A500 A645 73,1
Error in line 81: 9mlbyRxyvfL S427 140,2
Error in line 94: LwpQVwI4qPM A500 134,5
Error in line 99: A500 S427 22,1
Error in line 102: A500 A813 9,9
Error in line 110: jB8WgAiPu A500 -3,0
Error in line 111: 9mlbyRxyvfL A813 38,2
Error in line 113: 1HUAmU S427 82,5
Error in line 122: 1HUAmU A813 9,2
Error in line 107: jB8WgAiPu A500 99,7
Error in line 127: 1HUAmU A645 384,3
Error in line 135: gE5K5JDZ S427 19,61
Error in line 136: gE5K5JDZ S427 33,6
Error in line 139: A500 A645 55,3
Error in line 148: A500 A500 74,0
Error in line 144: 9mlbyRxyvfL A645 15,0
Error in line 153: LwpQVwI4qPM A813 68,65
Error in line 150: A500 A813 86,5
Error in line 158: A500 A500 90,8
Error in line 169: jB8WgAiPu A500 82,2
Error in line 156: LwpQVwI4qPM A813 194,5
Error in line 173: 1HUAmU A500 0,9
Error in line 180: 1HUAmU A645 83,4
Error in line 190: LwpQVwI4qPM A500 30,0
Error in line 187: 1HUAmU A500 18,5
Error in line 198: A500 A500 51,5
Error in line 194: 1HUAmU S427 14,9
Error in line 192: 4zuyCe6PBiZ S427 59,1
Error in line 205: LwpQVwI4qPM S427 61,1
Error in line 209: 4zuyCe6PBiZ S427 12,8
Error in line 218: 4zuyCe6PBiZ A645 24,2
Error in line 220: jB8WgAiPu A813 87,3
Error in line 222: jB8WgAiPu A500 29,8
Error in line 229: gE5K5JDZ A645 H72,6
Error in line 227: jB8WgAiPu A645 36,5
Error in line 219: 1HUAmU A813 72,9
Error in line 241: 1HUAmU A813 45,21
